kubernetes/statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          ports:
            - containerPort: 3306
              name: mysql
          # resources:
          #   requests:
          #     cpu: "0.5"
          #     memory: "512Mi"
          #   limits:
          #     cpu: "1"
          #     memory: "1Gi"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-initdb-volume
              mountPath: /docker-entrypoint-initdb.d/init.sql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        - name: mysql-initdb-volume
          configMap:
            name: mysql-initdb-configmap
