kubernetes/flaskService.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  type: LoadBalancer
  ports:
    - name: http
      port: 5000
      targetPort: 5000
